--- a/content/post/global_seafood_growth_dataviz.Rmd
+++ b/content/post/global_seafood_growth_dataviz.Rmd
@@ -43,7 +43,7 @@ By using a second dataset on global food supply of seafood, I can calculate the 
 
 If you’re interested in the data I used, here is a screenshot of the manual query on FAOSTAT.
 
-![](~/github/personal_website/static/img/fao_query.png)
+![](/img/fao_query.png)
 
 I am still hopeful that someone, somewhere will create an FAO R package that lets me query all of their data directly from R. In the meantime, I'll wrangle these two datasets together as best I can.
 
@@ -127,7 +127,7 @@ static_plot <- ggplot(plot_data, aes(x = time, y = y)) +
 static_plot
 ```
 
-![](~/github/personal_website/static/img/static.png)
+![](/img/static.png)
 
 ### Animate with `gganimate()`
 
@@ -148,7 +148,7 @@ gganimate(dynam_plot, filename = "fao_gganimate.gif", title_frame = F)
 
 ```
 
-![](~/github/personal_website/static/img/fao_gganimate.gif)
+![](/img/fao_gganimate.gif)
 
 ### Smooth animation with `tweenr` + `ggplot` + `gganimate`
 
@@ -183,7 +183,7 @@ tween_plot <- ggplot(data_tween, aes(x = x, y = y, frame = .frame, color = id)) 
     
 gganimate(tween_plot, title_frame = FALSE, interval = 0.05)
 ```
-![](~/github/personal_website/static/img/fao_aq_capture_fig.gif)
+![](/img/fao_aq_capture_fig.gif)
 
 I spent a lot of time messing with the text sizes, colors, label placement, etc. I also learned how to add an arrow (thanks, `geom_segment()`). While I could keep tweaking this forever, I think it's good enough as is. The whole process of learning how to use `tweenr` took me just a couple hours and I'm excited for the next opportunity to make something like this!
 
