--- a/content/post/2018-04-18-cropping-rasters-down-to-size-mangroves.Rmd
+++ b/content/post/2018-04-18-cropping-rasters-down-to-size-mangroves.Rmd
@@ -9,8 +9,8 @@ tags: ["spatial", "Ocean Health Index"]
 
 A significant portion of my work on the Ocean Health Index (OHI) involves working with [raster data](http://desktop.arcgis.com/en/arcmap/10.3/manage-data/raster-and-images/what-is-raster-data.htm), a specific type of spatial data where values are held in grid cells. The data I work with varies from high resolution remotely sensed data on [sea surface temperature](https://www.nodc.noaa.gov/sog/cortad/) to coarse, modeled data on global [fish catch](http://www.seaaroundus.org/data/#/spatial-catch). When I was working on the [global assessment](http://ohi-science.org/ohi-global/), I dealt with raster data at a global scale. 
 
-![Sea Surface Temperature](/img/sst.png)
-![Global Fish Catch](/img/saup_map.png)
+![](/img/example_rasters.png)
+
 
 Now that I'm working on a regional assessment in the [US Northeast](http://www.ohi-northeast.org/), I often need to use the same data from the global assessment but crop it to my regional scale. Since I know I'm not the only one doing this (we have [over 20 OHI+ assessments happening around the world](http://ohi-science.org/projects/ohi-assessments/) right now), I wanted to share my process for making our global raster layers usable at regional scales.
 
@@ -55,18 +55,24 @@ Some important information about this dataset:
 
 Let's just take a look at the raw data. Since mangroves tend to be limited to coastal regions at tropical latitudes, it is difficult to make sense of this data when visualizing it at a global scale, even when I make all cells black in color. This is also due to the high resolution of the data.
 
+Can you see the dots!?
+
 ```{r mangrove}
 mangrove <- raster(file.path(dir_M, 'git-annex/globalprep/Mangrove/v2015/tmp/mangrove_2012_mw/mangrove_2012_mw_km2.tif'))
+
+par(mar = c(0.1, 0.1, 0.1, 0.1))
 plot(mangrove, col = "black", axes = F)
 ```
 
-Fortunately, R gives us some options to explore the data more closely. We can zoom in using `raster::select()` to make more sense of the speckles we see currently.
+Fortunately, R gives us some options to explore the data more closely. We can zoom in using `raster::select()` to make more sense of the speckles we see currently. The `select()` function allows you to select an area on the plot with your cursor. By saving your selection to a variable (in our case `s`) you can then plot just that piece of the raster.
 
 ![](/img/select_mangrove.gif)
 
+OK that looks more like it!
+
 ## Get region polygon
 
-We provide a shapefile of our global regions, which can be loaded and filtered for any of the 240 regions we include. This is useful for anyone that wants to use data provided at the global level, but cropped down to a region of interest. You can mamnually download the shapefile [here](https://mazu.nceas.ucsb.edu/data/#ohi_regions). I will download it onto my personal computer and save it in a folder called `data`.
+We provide a shapefile of our global regions, which can be loaded and filtered for any of the 240 regions we include. This is useful for anyone that wants to use data provided at the global level, but cropped down to a region of interest. You can click and download the shapefile [here](https://mazu.nceas.ucsb.edu/data/#ohi_regions). I will download it onto my personal computer and save it in a folder called `data`.
 
 ![](/img/eezs.png)
 
@@ -80,7 +86,7 @@ unzip("data/ohi-global-regions.zip",exdir="data/regions")
 
 Once downloaded, you will have two different regions files, one in **Mollweide** and one in **WGS84**. You can select which suits your needs. If you need more information on coordinate reference systems see [here](https://www.nceas.ucsb.edu/~frazier/RSpatialGuides/OverviewCoordinateReferenceSystems.pdf). 
 
-Since the mangrove data comes in Mollweide, we will use the regions file in the same projection, `regions_mol`. I'm going to use the function `st_read()` to load the shapefile. This comes from the `sf` package and I think it is a cleaner way of loading and working with spatial data as opposed to using `readOGR()` from the `rgdal` package. But, as you'll see later, when working with both polygons and rasters it is often necessary to convert a simple feature object to a `SpatialPolygonsDataFrame`.
+Since the mangrove data is already in a Mollweide projection, we will use the regions file in the same projection, `regions_mol`. I'm going to use the function `st_read()` to load the shapefile. This comes from the `sf` package and I think it is a cleaner way of loading and working with spatial data as opposed to using `readOGR()` from the `rgdal` package. But, as you'll see later, when working with both polygons and rasters it is often necessary to convert a simple feature object to a `SpatialPolygonsDataFrame`.
 
 ```{r st_read}
 ## use st_read to read in the global regions shapefile as a Simple Feature object
@@ -125,7 +131,7 @@ bang_sp <- as(bangladesh, 'Spatial')
 bang_sp
 ```
 
-Now we can crop our mangrove data layer using the `crop()` function from the `raster` package. This function takes the raster data you want to crop (in our case it is `mangrove`) and the shapefile from which to get the coordinates for cropping (`bang_sp` here).
+Now we can crop our mangrove data layer using the `crop()` function from the `raster` package. This function takes the raster data you want to crop (in our case it is `mangrove`) and the shapefile from which to get the coordinates for cropping (`bang_sp`).
 
 ```{r crop_mangrove_data}
 bang_man <- crop(mangrove, bang_sp)
