added date maybe that works

--- a/content/post/2020-03-31-sense-of-place-twitter.Rmd
+++ b/content/post/2020-03-31-sense-of-place-twitter.Rmd
@@ -4,7 +4,7 @@ author: Jamie Montgomery
 date: '2020-03-31'
 slug: santa-barbara-twitter
 categories: []
-tags: ["spatial", "Ocean Health Index"]
+tags: ["spatial"]
 ---
 
 # Summary
